# CRM_sys

./: README.md  pyproject.toml
crm_system/crm_app/: admin.py  forms.py  models.py  views.py
crm_system/crm_app/migrations/: 0001_initial.py  0002_customer_deviceinfield_order.py
crm_system/crm_app/static/crm_app/css/: style.css
crm_system/crm_app/templates/crm_app/: base.html  devices_page.html  main_page.html  zaglushka_page.html
crm_system/crm_system/: asgi.py  settings.py  urls.py  wsgi.py
